--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>file repository</title>
+    <style>
+        table {
+          font-family: arial, sans-serif;
+          border-collapse: collapse;
+          width: 100%;
+        }
+        
+        td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+        }
+        
+        tr:nth-child(even) {
+          background-color: #dddddd;
+        }
+    </style>
   </head>
   <body>
     <h1></h1>
