--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <td>Pet adventure maps and daily gifts</td>
         </tr>
         <tr>
-            <td><img src="img/gifts.JPG" alt="Italian Trulli"></td>
+            <td><img src="img/artifact.JPG" alt="Italian Trulli"></td>
             <td><a href="http://bit.ly/3K9X55f">Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
         </tr>
