--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         tr:nth-child(even) {
           background-color: #dddddd;
         }
+        img {
+            height: 10%;
+            width: 250px;
+        }
     </style>
   </head>
   <body>
@@ -40,7 +44,7 @@
             <td>Hero's artifact effect</td>
         </tr>
         <tr>
-            <td><img src="img/artifact.JPG" alt="Italian Trulli"></td>
+            <td><img src="img/osh.JPG" alt="Italian Trulli"></td>
             <td><a href="http://bit.ly/40kcWnt">OSH Battle Strategy</a></td>
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
