--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         td, th {
           border: 1px solid #dddddd;
-          text-align: left;
+          text-align: middle;
           padding: 8px;
         }
         
