--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             height: 10%;
             width: 250px;
         }
+        a {
+            text-align: center;
+            display: block;
+        }
     </style>
   </head>
   <body>
@@ -34,7 +38,7 @@
             <th>Description</th> 
         </tr>
         <tr>
-            <td><img src="img/gifts.JPG" alt="Italian Trulli"></td>
+            <td><img src="img/gifts.JPG" alt="Italian Trulli" align="right"></td>
             <td><a href="https://www.solfors.com/">Free Gifts & Adventure Paths</a></td>
             <td>Pet adventure maps and daily gifts</td>
         </tr>
