--- a/index.html
+++ b/index.html
@@ -38,37 +38,37 @@
             <th>Description</th> 
         </tr>
         <tr>
-            <td><img src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="https://www.solfors.com/">Free Gifts & Adventure Paths</a></td>
             <td>Pet adventure maps and daily gifts</td>
         </tr>
         <tr>
-            <td><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3K9X55f">Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
         </tr>
         <tr>
-            <td><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/40kcWnt">OSH Battle Strategy</a></td>
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
         <tr>
-            <td><img src="img/weeklydamage.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/weeklydamage.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3JMSULl">Weekly Damage to OSH</a></td>
             <td>Spread sheet to record each member's damage to OSH</td>
         </tr>
         <tr>
-            <td><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN">Top 50 Arena Teams in Other Servers</a></td>
             <td>Only the data on server 1,3,12,52</td>
         </tr>
         <tr>
-            <td><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3nlIN8A">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
         <tr>
-            <td><img src="img/cow.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/cow.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3LTJXm4">Clash of World Team Arrangement</a></td>
             <td>The document will be updated after the end of Clash of World season 2</td>
         </tr>
