--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <tr>
             <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN">Top 50 Arena Teams in Other Servers</a></td>
-            <td>Only the data on server 1,3,12,52</td>
+            <td>Only the teams on server 1,3,12,52</td>
         </tr>
         <tr>
             <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
