--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <table>
         <tr>
             <th>Thumbnail</th>
-            <th>File</th>
+            <th>Link</th>
             <th>Description</th> 
         </tr>
         <tr>
