--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td align="center"><img src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="https://www.solfors.com/">Free Gifts & Adventure Paths</a></td>
+            <td><a href="https://www.solfors.com/">Free Gifts & Adventure Maps</a></td>
             <td>Pet adventure maps and daily gifts</td>
         </tr>
         <tr>
