--- a/index.html
+++ b/index.html
@@ -37,34 +37,34 @@
             <th>Link</th>
             <th>Description</th> 
         </tr>
-        <tr>
+        <tr> 
             <td align="center"><img src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="https://www.solfors.com/">Free Gifts & Adventure Maps</a></td>
+            <td><a href="https://www.solfors.com/" target="_blank">Free Gifts & Adventure Maps</a></td>
             <td>Pet adventure maps and daily gifts</td>
         </tr>
         <tr>
             <td align="center"><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/3K9X55f">Artifact Effect</a></td>
+            <td><a href="http://bit.ly/3K9X55f" target="_blank">Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
         </tr>
         <tr>
             <td align="center"><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/40kcWnt">OSH Battle Strategy</a></td>
+            <td><a href="http://bit.ly/40kcWnt" target="_blank">OSH Battle Strategy</a></td>
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
         <tr>
             <td align="center"><img src="img/weeklydamage.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/3JMSULl">Weekly Damage to OSH</a></td>
+            <td><a href="http://bit.ly/3JMSULl" target="_blank">Weekly Damage to OSH</a></td>
             <td>Spread sheet to record each member's damage to OSH</td>
         </tr>
         <tr>
             <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/42IWrCN">Top 50 Arena Teams in Other Servers</a></td>
+            <td><a href="http://bit.ly/42IWrCN" target="_blank">Top 50 Arena Teams in Other Servers</a></td>
             <td>Only the teams on server 1,3,12,52</td>
         </tr>
         <tr>
             <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/3nlIN8A">Guild War</a></td>
+            <td><a href="http://bit.ly/3nlIN8A" target="_blank">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
         <tr>
