--- a/index.html
+++ b/index.html
@@ -53,25 +53,30 @@
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/weeklydamage.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/3JMSULl" target="_blank">Weekly Damage to OSH</a></td>
-            <td>Spread sheet to record each member's damage to OSH</td>
+            <td align="center"><img src="img/petAdventure.JPG" alt="Italian Trulli" align="middle"></td>
+            <td><a href="https://docs.google.com/presentation/d/1DebO28XwBUf4j9pOm-JZ2gZb_tmSXSE8e23kYc-r6jc/edit#slide=id.p" target="_blank">Pet adventure buff, hero damage type, counter and pet patronage</a></td>
+            <td>Pet adventure buff, hero damage type, counter and pet patronage</td>
+        </tr>
+        <tr>
+          <td align="center"><img src="img/ascension.JPG" alt="Italian Trulli" align="middle"></td>
+          <td><a href="https://docs.google.com/presentation/d/1E0HMPYTIOAz3H3YWDuw_1twOac7H9TbT6sjGi1KXDao/edit#slide=id.p" target="_blank">Profile of Heroes' Ascension crystal</a></td>
+          <td>Profile of Heroes' Ascension crystal</td>
         </tr>
         <tr>
             <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN" target="_blank">Top 50 Arena Teams in Other Servers</a></td>
-            <td>Only the teams on server 1,3,12,52</td>
+            <td>Only the teams on server 1,3,12,52 (last updated in January, 2023</td>
         </tr>
         <tr>
             <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3nlIN8A" target="_blank">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
-        <tr>
+        <!-- <tr>
             <td align="center"><img src="img/cow.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3LTJXm4">Clash of World Team Arrangement</a></td>
             <td>The document will be updated after the end of Clash of World season 2</td>
-        </tr>
+        </tr> -->
       </table>
   </body>
 </html>
