--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
         </tr>
         <tr>
             <td align="center"><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/3K9X55f" target="_blank">Artifact Effect</a></td>
+            <td><a href="http://bit.ly/3K9X55f" target="_blank">Hero Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
         </tr>
         <tr>
             <td align="center"><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/40kcWnt" target="_blank">OSH Battle Strategy</a></td>
+            <td><a href="http://bit.ly/40kcWnt" target="_blank">Guild Raid Battle Strategy</a></td>
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
         <tr>
             <td align="center"><img src="img/petAdventure.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="https://docs.google.com/presentation/d/1DebO28XwBUf4j9pOm-JZ2gZb_tmSXSE8e23kYc-r6jc/edit#slide=id.p" target="_blank">Pet adventure buff, hero damage type, counter and pet patronage</a></td>
+            <td><a href="https://docs.google.com/presentation/d/1DebO28XwBUf4j9pOm-JZ2gZb_tmSXSE8e23kYc-r6jc/edit#slide=id.p" target="_blank">Pet Adventure</a></td>
             <td>Pet adventure buff, hero damage type, counter and pet patronage</td>
         </tr>
         <tr>
           <td align="center"><img src="img/ascension.JPG" alt="Italian Trulli" align="middle"></td>
-          <td><a href="https://docs.google.com/presentation/d/1E0HMPYTIOAz3H3YWDuw_1twOac7H9TbT6sjGi1KXDao/edit#slide=id.p" target="_blank">Profile of Heroes' Ascension crystal</a></td>
+          <td><a href="https://docs.google.com/presentation/d/1E0HMPYTIOAz3H3YWDuw_1twOac7H9TbT6sjGi1KXDao/edit#slide=id.p" target="_blank">Ascension</a></td>
           <td>Profile of Heroes' Ascension crystal</td>
         </tr>
         <tr>
             <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN" target="_blank">Top 50 Arena Teams in Other Servers</a></td>
-            <td>Only the teams on server 1,3,12,52 (last updated in January, 2023</td>
+            <td>Only the teams on server 1,3,12,52 (last updated in January, 2023)</td>
         </tr>
         <tr>
             <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
