add island reward and grand prize slides

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   </head>
   <body>
     <h1></h1>
+    <div class="carousel-item">
+      <img src="img/island.png" alt="Italian Trulli" align="middle">
+    </div>
     <table>
         <tr>
             <th>Thumbnail</th>
@@ -46,6 +49,11 @@
             <td align="center"><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3K9X55f" target="_blank">Hero Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
+        </tr>
+        <tr>
+          <td align="center"><img src="img/grand-prize.JPG" alt="Italian Trulli" align="middle"></td>
+          <td><a href="https://docs.google.com/presentation/d/1OQppmCMqesDuLcTyiJSHEcfYprvp-5KOVmYzxyID_QY/edit#slide=id.p" target="_blank">Grand Prize</a></td>
+          <td>Methods of taking advantage of lucky time to earn grand prize with higher probability</td>
         </tr>
         <tr>
             <td align="center"><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
