add island reward and grand prize slides

--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
             text-align: center;
             display: block;
         }
+        img.island {
+          height: auto;
+          width: auto;
+        }
+        .center {
+          display: block;
+          margin-left: 30%;
+          margin-right: 30%;
+          width: 40%;
+          padding: 10px;
+        }
     </style>
   </head>
   <body>
     <h1></h1>
-    <div class="carousel-item">
-      <img src="img/island.png" alt="Italian Trulli" align="middle">
+    <div class="center">
+      <a href="https://drive.google.com/file/d/1AMBZw1BGmJdIM9O8m4MOQEV4Kq1RL7Le/view?usp=sharing">
+        <img class="island" src="img/island.png" alt="Italian Trulli" align="middle">
+      </a>
     </div>
     <table>
         <tr>
