update top 50 slides

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </tr>
         <tr>
             <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
-            <td><a href="http://bit.ly/42IWrCN" target="_blank">Top 50 Arena Teams in Other Servers</a></td>
-            <td>Only the teams on server 1,3,12,52 (last updated in January, 2023)</td>
+            <td><a href="http://bit.ly/42IWrCN" target="_blank">Arena Teams in Other Servers</a></td>
+            <td>Only the teams on some top 50 guilds in Clash of World  (last updated in Octobor, 2023)</td>
         </tr>
         <tr>
             <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
