update top 50 slides

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
           <td>Profile of Heroes' Ascension crystal</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/top50.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/arena.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN" target="_blank">Arena Teams in Other Servers</a></td>
             <td>Only the teams on some top 50 guilds in Clash of World  (last updated in Octobor, 2023)</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/guildwar.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/guildWar.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3nlIN8A" target="_blank">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
