update top 50 slides

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <td>Only the teams on some top 50 guilds in Clash of World  (last updated in Octobor, 2023)</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/guildWar.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img src="img/gw.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3nlIN8A" target="_blank">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
