--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1></h1>
     <div class="center">
       <a href="https://drive.google.com/file/d/1AMBZw1BGmJdIM9O8m4MOQEV4Kq1RL7Le/view?usp=sharing">
-        <img class="island" src="img/island.png" alt="Italian Trulli" align="middle">
+        <img class="island" src="img/island2.jpg" alt="Italian Trulli" align="middle">
       </a>
     </div>
     <table>
