add north island

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="column">
         <div class="image-description">
-          <p>South Part</p>
+          <p>Southern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1AMBZw1BGmJdIM9O8m4MOQEV4Kq1RL7Le/view?usp=sharing">
           <img src="img/island2.jpg" alt="Forest" style="width:100%">
@@ -81,7 +81,7 @@
       </div>
       <div class="column">
         <div class="image-description">
-          <p>North Part</p>
+          <p>Northern Part</p>
         </div>
         <img src="img/island-north.png" alt="Forest" style="width:100%">
       </div>
