add north island

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <div class="image-description">
           <p>Northern Part</p>
         </div>
-        <img src="img/island-north.png" alt="Forest" style="width:100%">
+        <a href="https://drive.google.com/file/d/1SJqkoNIfr3IGLLR7RHNmh-VADN0BIdFX/view?usp=sharing">
+          <img src="img/island-north.png" alt="Forest" style="width:100%">
+        </a>
       </div>
     </div>
 
