--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         * {
           box-sizing: border-box;
         }
+
         table {
           font-family: arial, sans-serif;
           border-collapse: collapse;
@@ -18,21 +19,35 @@
           text-align: middle;
           padding: 8px;
         }
+
+        th.warning {
+          color: red;
+          border: 1px solid #dddddd;
+          text-align: middle;
+          padding: 8px;
+        }
         
         tr:nth-child(even) {
           background-color: #dddddd;
         }
-        img {
-            height: 10%;
-            width: 250px;
-        }
+
         a {
             text-align: center;
             display: block;
         }
+
         img.island {
           height: auto;
           width: auto;
+        }
+
+        img.slides {
+            height: 10%;
+            width: 250px;
+        }
+
+        img.cosmic {
+            width: 50px;
         }
 
         .column {
@@ -63,13 +78,6 @@
     </style>
   </head>
   <body>
-    <!-- <div class="center">
-      <a href="https://drive.google.com/file/d/1AMBZw1BGmJdIM9O8m4MOQEV4Kq1RL7Le/view?usp=sharing">
-        <img class="island" src="img/island2.jpg" alt="Italian Trulli" align="middle">
-      </a>
-      <img class="island" src="img/island-north.png" alt="Italian Trulli" align="middle">
-    </div> -->
-
     <div class="row">
       <div class="column">
         <div class="image-description">
@@ -86,6 +94,97 @@
         <a href="https://drive.google.com/file/d/13m4oMRZUHsgnKWOWEw7NZRujayyIXKIJ/view?usp=sharing">
           <img src="img/island-north.png" alt="Forest" style="width:100%">
         </a>
+        <table>
+          <tr>
+            <th colspan="3">Interplanetary Travel 11/09~11/15</th>
+          </tr>
+          <tr>
+            <th class="warning" colspan="3">Warning: The following numbers are provided by Hero Wars, <br>but it does not mean all players can defeat boss for sure.</th>
+          </tr>
+          <tr>
+              <th>Boss level</th>
+              <th>Recommended amount of Cosmic Powers <img class="cosmic" src="img/power.JPG" alt="Italian Trulli" align="middle"></th>
+              <th>Robot energy you need <img class="cosmic" src="img/Robot_Energy.jpg" alt="Italian Trulli" align="middle"></th> 
+          </tr>
+          <tr> 
+            <td align="center">130</td>
+            <td align="center">0</td>
+            <td align="center">0</td>
+          </tr>
+          <tr> 
+            <td align="center">140</td>
+            <td align="center">20</td>
+            <td align="center">24</td>
+          </tr>
+          <tr> 
+            <td align="center">150</td>
+            <td align="center">30</td>
+            <td align="center">36</td>
+          </tr>
+          <tr> 
+            <td align="center">160</td>
+            <td align="center">40</td>
+            <td align="center">48</td>
+          </tr>
+          <tr> 
+            <td align="center">170</td>
+            <td align="center">60</td>
+            <td align="center">72</td>
+          </tr>
+          <tr> 
+            <td align="center">180</td>
+            <td align="center">70</td>
+            <td align="center">84</td>
+          </tr>
+          <tr> 
+            <td align="center">190</td>
+            <td align="center">90</td>
+            <td align="center">108</td>
+          </tr>
+          <tr> 
+            <td align="center">200</td>
+            <td align="center">100</td>
+            <td align="center">120</td>
+          </tr>
+          <tr> 
+            <td align="center">210</td>
+            <td align="center">110</td>
+            <td align="center">132</td>
+          </tr>
+          <tr> 
+            <td align="center">220</td>
+            <td align="center">130</td>
+            <td align="center">156</td>
+          </tr>
+          <tr> 
+            <td align="center">230</td>
+            <td align="center">140</td>
+            <td align="center">168</td>
+          </tr>
+          <tr> 
+            <td align="center">240</td>
+            <td align="center">170</td>
+            <td align="center">204</td>
+          </tr>
+          <tr> 
+            <td align="center">250</td>
+            <td align="center">190</td>
+            <td align="center">228</td>
+          </tr>
+          <tr> 
+            <td align="center">260</td>
+            <td align="center">210</td>
+            <td align="center">252</td>
+          </tr>
+          <tr> 
+            <td align="center">270</td>
+            <td align="center">230</td>
+            <td align="center">276</td>
+          </tr>
+          <tr> 
+            <td align="center" colspan="3">Reference<a href="https://www.hw-library.com/upcoming-events#interplanetary-travel">https://www.hw-library.com/upcoming-events#interplanetary-travel</a></td>
+          </tr>
+        </table>
       </div>
     </div>
 
@@ -96,42 +195,42 @@
             <th>Description</th> 
         </tr>
         <tr> 
-            <td align="center"><img src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/gifts.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="https://www.solfors.com/" target="_blank">Free Gifts & Adventure Maps</a></td>
             <td>Pet adventure maps and daily gifts</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/artifact.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3K9X55f" target="_blank">Hero Artifact Effect</a></td>
             <td>Hero's artifact effect</td>
         </tr>
         <tr>
-          <td align="center"><img src="img/grand-prize.JPG" alt="Italian Trulli" align="middle"></td>
+          <td align="center"><img class="slides" src="img/grand-prize.JPG" alt="Italian Trulli" align="middle"></td>
           <td><a href="https://docs.google.com/presentation/d/1OQppmCMqesDuLcTyiJSHEcfYprvp-5KOVmYzxyID_QY/edit#slide=id.p" target="_blank">Grand Prize</a></td>
           <td>Methods of taking advantage of lucky time to earn grand prize with higher probability</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/osh.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/40kcWnt" target="_blank">Guild Raid Battle Strategy</a></td>
             <td>Suggestion for members who cannot deal over 10 million damage to OSH</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/petAdventure.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/petAdventure.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="https://docs.google.com/presentation/d/1DebO28XwBUf4j9pOm-JZ2gZb_tmSXSE8e23kYc-r6jc/edit#slide=id.p" target="_blank">Pet Adventure</a></td>
             <td>Pet adventure buff, hero damage type, counter and pet patronage</td>
         </tr>
         <tr>
-          <td align="center"><img src="img/ascension.JPG" alt="Italian Trulli" align="middle"></td>
+          <td align="center"><img class="slides" src="img/ascension.JPG" alt="Italian Trulli" align="middle"></td>
           <td><a href="https://docs.google.com/presentation/d/1E0HMPYTIOAz3H3YWDuw_1twOac7H9TbT6sjGi1KXDao/edit#slide=id.p" target="_blank">Ascension</a></td>
           <td>Profile of Heroes' Ascension crystal</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/arena.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/arena.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/42IWrCN" target="_blank">Arena Teams in Other Servers</a></td>
             <td>Only the teams on some top 50 guilds in Clash of World  (last updated in Octobor, 2023)</td>
         </tr>
         <tr>
-            <td align="center"><img src="img/gw.JPG" alt="Italian Trulli" align="middle"></td>
+            <td align="center"><img class="slides" src="img/gw.JPG" alt="Italian Trulli" align="middle"></td>
             <td><a href="http://bit.ly/3nlIN8A" target="_blank">Guild War</a></td>
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
