--- a/index.html
+++ b/index.html
@@ -96,95 +96,30 @@
         </a>
         <table>
           <tr>
-            <th colspan="3">Interplanetary Travel 11/09~11/15</th>
+            <th >Interplanetary Travel 11/09~11/15</th>
           </tr>
           <tr>
-            <th class="warning" colspan="3">Warning: The following numbers are provided by Hero Wars, <br>but it does not mean all players can defeat boss for sure.</th>
+            <th >1. The strength of your heroes is related to Great tree of wisdom</th>
           </tr>
           <tr>
-              <th>Boss level</th>
-              <th>Recommended amount of Cosmic Powers <img class="cosmic" src="img/power.JPG" alt="Italian Trulli" align="middle"></th>
-              <th>Robot energy you need <img class="cosmic" src="img/Robot_Energy.jpg" alt="Italian Trulli" align="middle"></th> 
+            <th >2. Your Cosmic Power won't be consumed until you defeat an old competitor</th>
           </tr>
-          <tr> 
-            <td align="center">130</td>
-            <td align="center">0</td>
-            <td align="center">0</td>
+          <tr>
+            <th >3. The heroes of defeating the old competitor are Peppy, Fafnir, Jorgen, Julius and Thea, and pet is Oliver</th>
           </tr>
-          <tr> 
-            <td align="center">140</td>
-            <td align="center">20</td>
-            <td align="center">24</td>
+          <tr>
+            <th >4. Fafnir's Runic shield should only be applied to Jorgen, if not, you can just restart the battle</th>
           </tr>
-          <tr> 
-            <td align="center">150</td>
-            <td align="center">30</td>
-            <td align="center">36</td>
+            <tr>  
+            <th >5. Fafnir can be dead in the battle</th>
           </tr>
-          <tr> 
-            <td align="center">160</td>
-            <td align="center">40</td>
-            <td align="center">48</td>
+            <tr>
+            <th >6. If Jorgen or Julius cannot survive during the first wave of Orion's missile attack, you can just restart the battle and get more cosmic power</th>
           </tr>
-          <tr> 
-            <td align="center">170</td>
-            <td align="center">60</td>
-            <td align="center">72</td>
+            <tr>
+            <th >7. Old competitor's (Cornelius) skill (memory loss) is allowed to applied to Fafnir or Jorgen or Peppy. If not, you can just restart the battle</th>
           </tr>
-          <tr> 
-            <td align="center">180</td>
-            <td align="center">70</td>
-            <td align="center">84</td>
-          </tr>
-          <tr> 
-            <td align="center">190</td>
-            <td align="center">90</td>
-            <td align="center">108</td>
-          </tr>
-          <tr> 
-            <td align="center">200</td>
-            <td align="center">100</td>
-            <td align="center">120</td>
-          </tr>
-          <tr> 
-            <td align="center">210</td>
-            <td align="center">110</td>
-            <td align="center">132</td>
-          </tr>
-          <tr> 
-            <td align="center">220</td>
-            <td align="center">130</td>
-            <td align="center">156</td>
-          </tr>
-          <tr> 
-            <td align="center">230</td>
-            <td align="center">140</td>
-            <td align="center">168</td>
-          </tr>
-          <tr> 
-            <td align="center">240</td>
-            <td align="center">170</td>
-            <td align="center">204</td>
-          </tr>
-          <tr> 
-            <td align="center">250</td>
-            <td align="center">190</td>
-            <td align="center">228</td>
-          </tr>
-          <tr> 
-            <td align="center">260</td>
-            <td align="center">210</td>
-            <td align="center">252</td>
-          </tr>
-          <tr> 
-            <td align="center">270</td>
-            <td align="center">230</td>
-            <td align="center">276</td>
-          </tr>
-          <tr> 
-            <td align="center" colspan="3">Reference<a href="https://www.hw-library.com/upcoming-events#interplanetary-travel">https://www.hw-library.com/upcoming-events#interplanetary-travel</a></td>
-          </tr>
-        </table>
+          </table>
       </div>
     </div>
 
