--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
             <th >Interplanetary Travel 11/09~11/15</th>
           </tr>
           <tr>
+            <th ><img src="img/str.JPG" alt="Forest" style="width:100%"></th>
+          </tr>
+          <tr>
             <th >1. The strength of your heroes is related to Great tree of wisdom</th>
           </tr>
           <tr>
