add planner version 1

--- a/index.html
+++ b/index.html
@@ -143,5 +143,6 @@
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
     </table>
+    <a href="mysterious-island-planner.html" target="_blank">Mysterious Island Planner</a>
   </body>
 </html>
