add guild war log

--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@
         </tr>
     </table>
     <a href="mysterious-island-planner.html" target="_blank">Mysterious Island Planner</a>
+    <a href="guildwar-dashboard.html" target="_blank">Latest Guild War Log</a>
   </body>
 </html>
