--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <td>Member's time zone and suggestion for members who are tired of waiting in Guild War</td>
         </tr>
     </table>
-    <a href="mysterious-island-planner.html" target="_blank">Mysterious Island Planner</a>
+    <!-- <a href="mysterious-island-planner.html" target="_blank">Mysterious Island Planner</a> -->
     <a href="guildwar-dashboard.html" target="_blank">Latest Guild War Log</a>
   </body>
 </html>
