--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
         </tr>
     </table>
     <!-- <a href="mysterious-island-planner.html" target="_blank">Mysterious Island Planner</a> -->
-    <a href="guildwar-dashboard.html" target="_blank">Latest Guild War Log</a>
+    <h1>Guild War Log</h1>
+    <a href="guildwar-dashboard-ASGARD.html" target="_blank">ASGARD</a>
+    <a href="guildwar-dashboard-KATANA.html" target="_blank">KATANA</a>
+    <a href="guildwar-dashboard-KONOHA.html" target="_blank">KONOHA</a>
+    <a href="guildwar-dashboard-Sandbox.html" target="_blank">Sandbox</a>
+    <a href="guildwar-dashboard-Why-So-Serious.html" target="_blank">Why So Serious</a>
   </body>
 </html>
