--- a/guildwar-dashboard-Why-So-Serious.html
+++ b/guildwar-dashboard-Why-So-Serious.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASGARD Guild War Log</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="lineup.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/lineup.css">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <script src="filter.js"></script>
+    <script src="js/filter.js"></script>
     <h1>Why So Serious</h1>
     <h4>Guild War Log Updated on 2024/1/22</h4>
     <div class="button" onclick="buttonClick()">Show all</div>
